--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
    "private": true,
    "devDependencies": {
       "@types/bun": "latest",
-      "@types/express": "^5.0.3"
+      "@types/express": "^5.0.3",
+      "prisma": "^6.14.0"
    },
    "scripts": {
       "start": "bun run index.ts",
@@ -15,6 +16,7 @@
       "typescript": "^5"
    },
    "dependencies": {
+      "@prisma/client": "^6.14.0",
       "dotenv": "^17.2.1",
       "express": "^5.1.0",
       "openai": "^5.13.1",
